# papyrus

./: pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
papyrus/: __init__.py
papyrus/core/: __init__.py  file.py
papyrus/engine/: __init__.py  extractor.py
papyrus/tools/: text_processing.py
test/: test_base.py
