[project]
name = "papyrus"
version = "0.1.0"
description = ""
authors = [
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pdfplumber==0.11.6",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]

lint = [
    "black",
    "mypy",
    "ruff"
]

optional_extractor = [
    "PyPDF2==3.0.1",
    "easyocr==1.7.2",
    "fitz",
    "pytesseract==0.3.13",
    "torch==2.7.0",
    "camelot-py ==1.0.0",
    "docling == 2.34.0",
    "huggingface-hub==0.32.0",
]

[project.urls]
"Homepage" = "https://github.com/eurobios-mews-labs/papyrus"




